# rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  api.json  build.rs  rustfmt.toml
.github/workflows/: audit.yml  build.yml  docs.yml  publish.yml
src/: lib.rs
src/api/: client.rs  macros.rs  mod.rs  remnawave_client.rs
src/api/controllers/: auth.rs  billing.rs  config_profiles.rs  external_squads.rs  hosts.rs  hwid.rs  internal_squads.rs  keygen.rs  macros.rs  mod.rs  nodes.rs  passkeys.rs  remnawave_settings.rs  snippets.rs  subscription_request_history.rs  subscriptions.rs  system.rs  tokens.rs  users.rs
src/api/types/: auth.rs  billing.rs  common.rs  config_profiles.rs  external_squads.rs  hosts.rs  hwid.rs  internal_squads.rs  keygen.rs  mod.rs  nodes.rs  passkeys.rs  remnawave_settings.rs  snippets.rs  subscription_request_history.rs  subscriptions.rs  system.rs  tokens.rs  users.rs
tests/: integration_tests.rs  unit_tests.rs
