[package]
name = "remnawave"
version = "1.6.15"
edition = "2024"

[lib]
name = "remnawave"
path = "src/lib.rs"

[[bin]]
name = "remnawave-test"
path = "src/bin/test.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
anyhow = "1.0.98"
regress = "0.10"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0.140"
syn = "2.0.104"
prettyplease = "0.2.35"
openapiv3 = "2.2.0"
