[package]
name = "remnawave"
version = "2.0.0"
authors = ["vffuunnyy <vffuunnyy@gmail.com>"]
description = "Rust SDK for Remnawave API - A comprehensive client library for interacting with Remnawave services"
license = "MIT"
repository = "https://github.com/remnawave/rust-sdk"
homepage = "https://github.com/remnawave/rust-sdk"
documentation = "https://docs.rs/remnawave"
keywords = ["api", "sdk", "client", "remnawave", "http"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
edition = "2021"
exclude = ["tests/*"]

[lib]
name = "remnawave"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_plain = "1.0"
anyhow = "1.0.98"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.4"
mockito = "1.4.0"
